added the banner section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
 
   <body>
     <!-- Banner section -->
-    <section></section>
+    <section class="banner-container">
+      <div class="banner-description">
+        <h1 class="banner-title">
+          Let's make beautiful flowers a part of your life.
+        </h1>
+        <p class="banner-sub-title">
+          Welcome to our online flower shop, where we believe in making
+          beautiful flowers a part of your life. Whether it's a birthday,
+          anniversary, we have the perfect arrangement to suit your needs.
+        </p>
+        <button class="banner-shop-btn">Shop Now</button>
+      </div>
+
+      <img
+        class="banner-pic"
+        src="images/pngwing 10.png"
+        alt="flower picture"
+      />
+    </section>
 
     <!-- Featured Flowers section -->
 
@@ -19,7 +37,7 @@
     <!-- Delivery section -->
     <section></section>
 
-    <!-- hot deals section -->
+    <!-- Hot deals section -->
     <section></section>
 
     <!-- Insta section -->
@@ -28,7 +46,7 @@
     <!-- Customer Reviews section -->
     <section></section>
 
-    <!-- Sunscribe section -->
+    <!-- Subscribe section -->
     <section></section>
 
     <!-- Footer section -->
