Featured Flowers section is added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,32 @@
 
     <!-- Featured Flowers section -->
 
-    <section></section>
+    <section>
+      <div class="description-feature-flower">
+        <h1 class="title-featured-flower">Our Featured Flowers</h1>
+        <p class="sub-title-featured-flower">
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout.
+        </p>
+      </div>
+
+      <div class="feature-flower-items">
+        <figure>
+          <img class="feature-flower-pic" src="images/pngwing 6.png" alt="" />
+          <figcaption>Pink Flower Tree</figcaption>
+        </figure>
+
+        <figure>
+          <img class="feature-flower-pic" src="images/pngwing 5.png" alt="" />
+          <figcaption>Red Flower Tree</figcaption>
+        </figure>
+
+        <figure>
+          <img class="feature-flower-pic" src="images/pngwing 7.png" alt="" />
+          <figcaption>Yellow Flower Tree</figcaption>
+        </figure>
+      </div>
+    </section>
 
     <!-- Delivery section -->
     <section></section>
