--- a/index.html
+++ b/index.html
@@ -60,22 +60,86 @@
     </section>
 
     <!-- Delivery section -->
-    <section></section>
+    <section class="delivery-container">
+      <figure>
+        <img class="delivery-icon" src="images/Group 57.png" alt="" />
+        <figcaption>Same Day Delivery. Click & Collect.</figcaption>
+      </figure>
+
+      <figure>
+        <img class="delivery-icon" src="images/Group 58.png" alt="" />
+        <figcaption>Fresh Flowers. Local Growers.</figcaption>
+      </figure>
+
+      <figure>
+        <img class="delivery-icon" src="images/Group 59.png" alt="" />
+        <figcaption>24/7 Free Support.</figcaption>
+      </figure>
+    </section>
 
     <!-- Hot deals section -->
-    <section></section>
+    <section class="hot-deal-container">
+      <div class="hot-deals-contents">
+        <h1 class="hot-deal-title">
+          Hot Deal ! Sale Up To 25% <span class="pink-text">Off</span>
+        </h1>
+        <p class="hot-deal-subtitle">
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout.
+        </p>
+        <button class="hot-deal-btn">Sign Up</button>
+      </div>
+
+      <img class="hot-deal-pic" src="images/pngwing 8.png" alt="" />
+    </section>
 
     <!-- Insta section -->
-    <section></section>
+    <section class="insta">
+      <div class="insta-texts">
+        <h1 class="insta-title">Instagram</h1>
+        <p class="insta-subtitle">
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout.
+        </p>
+      </div>
+
+      <div class="insta-images">
+        <img src="images/Flower 01.png" alt="" />
+        <img src="images/Rectangle 4.png" alt="" />
+        <img src="images/Rectangle 5.png" alt="" />
+        <img src="images/Rectangle 6.png" alt="" />
+      </div>
+    </section>
 
     <!-- Customer Reviews section -->
     <section></section>
 
     <!-- Subscribe section -->
-    <section></section>
+    <section class="subscribe">
+      <h1 class="subscribe-title">Get The Latest Deals</h1>
+      <p class="subscribe-sub-title">$30 coupon for first shopping</p>
+
+      <div class="subscribe-input">
+        <input
+          type="text"
+          placeholder="Enter your email here...."
+          class="email-box"
+        />
+        <input type="submit" class="submit-btn" value="Sbuscribe" />
+      </div>
+    </section>
 
     <!-- Footer section -->
 
-    <footer></footer>
+    <footer class="footer">
+      <h1 class="footer-title">Flower <span class="pink-text">Shop</span></h1>
+      <p class="footer-sub-title">
+        It is a long established fact that a reader will be distracted by the
+        readable content of a page when looking at its layout.
+      </p>
+      <p class="copyright">
+        &copy; 2020-2023, FlowerShop.com. All rights reserved.
+      </p>
+    </footer>
   </body>
 </html>
