--- a/index.html
+++ b/index.html
@@ -43,39 +43,57 @@
 
       <div class="feature-flower-items">
         <figure>
-          <img class="feature-flower-pic" src="images/pngwing 6.png" alt="" />
+          <img
+            class="feature-flower-pic pink-pic"
+            src="images/pngwing 6.png"
+            alt=""
+          />
           <figcaption>Pink Flower Tree</figcaption>
         </figure>
 
         <figure>
-          <img class="feature-flower-pic" src="images/pngwing 5.png" alt="" />
+          <img
+            class="feature-flower-pic red-pic"
+            src="images/pngwing 5.png"
+            alt=""
+          />
           <figcaption>Red Flower Tree</figcaption>
         </figure>
 
         <figure>
-          <img class="feature-flower-pic" src="images/pngwing 7.png" alt="" />
+          <img
+            class="feature-flower-pic yellow-pic"
+            src="images/pngwing 7.png"
+            alt=""
+          />
           <figcaption>Yellow Flower Tree</figcaption>
         </figure>
       </div>
     </section>
 
     <!-- Delivery section -->
-    <section class="delivery-container">
+    <!-- <section class="delivery-container">
       <figure>
         <img class="delivery-icon" src="images/Group 57.png" alt="" />
-        <figcaption>Same Day Delivery. Click & Collect.</figcaption>
+        <figcaption class="delivery-icon-caption">
+          Same Day Delivery. Click & Collect.
+        </figcaption>
       </figure>
 
       <figure>
         <img class="delivery-icon" src="images/Group 58.png" alt="" />
-        <figcaption>Fresh Flowers. Local Growers.</figcaption>
+        <figcaption class="delivery-icon-caption">
+          Fresh Flowers. Local Growers.
+        </figcaption>
       </figure>
 
       <figure>
         <img class="delivery-icon" src="images/Group 59.png" alt="" />
-        <figcaption>24/7 Free Support.</figcaption>
+        <figcaption class="delivery-icon-caption">
+          24/7 Free Support.
+        </figcaption>
       </figure>
-    </section>
+    </section> -->
 
     <!-- Hot deals section -->
     <section class="hot-deal-container">
@@ -104,10 +122,10 @@
       </div>
 
       <div class="insta-images">
-        <img src="images/Flower 01.png" alt="" />
-        <img src="images/Rectangle 4.png" alt="" />
-        <img src="images/Rectangle 5.png" alt="" />
-        <img src="images/Rectangle 6.png" alt="" />
+        <img class="insta-img" src="images/Flower 01.png" alt="" />
+        <img class="insta-img" src="images/Rectangle 4.png" alt="" />
+        <img class="insta-img" src="images/Rectangle 5.png" alt="" />
+        <img class="insta-img" src="images/Rectangle 6.png" alt="" />
       </div>
     </section>
 
@@ -125,7 +143,7 @@
           placeholder="Enter your email here...."
           class="email-box"
         />
-        <input type="submit" class="submit-btn" value="Sbuscribe" />
+        <input type="submit" class="submit-btn" value="Subscribe" />
       </div>
     </section>
 
