review section added

--- a/index.html
+++ b/index.html
@@ -130,7 +130,50 @@
     </section>
 
     <!-- Customer Reviews section -->
-    <section></section>
+    <section class="review-section"></section>
+
+    <h1 class="review-tile">What our clients are saying</h1>
+    <div class="review">
+      <div class="review-content">
+        <img class="client-img" src="/images/man.png" alt="" />
+        <h3 class="client-name pink-text">John Herdy</h3>
+        <p class="quote">
+          Thank you so much for making my daughters wedding so beautiful. I
+          could not have asked for better people to work with. God Bless & have
+          a great day.
+        </p>
+      </div>
+
+      <div class="review-content">
+        <img class="client-img" src="/images/man2.png" alt="" />
+        <h3 class="client-name pink-text">John Herdy</h3>
+        <p class="quote">
+          Thank you so much for making my daughters wedding so beautiful. I
+          could not have asked for better people to work with. God Bless & have
+          a great day.
+        </p>
+      </div>
+
+      <div class="review-content">
+        <img class="client-img" src="/images/woman.png" alt="" />
+        <h3 class="client-name pink-text">John Herdy</h3>
+        <p class="quote">
+          Thank you so much for making my daughters wedding so beautiful. I
+          could not have asked for better people to work with. God Bless & have
+          a great day.
+        </p>
+      </div>
+
+      <div class="review-content">
+        <img class="client-img" src="/images/woman2.png" alt="" />
+        <h3 class="client-name pink-text">John Herdy</h3>
+        <p class="quote">
+          Thank you so much for making my daughters wedding so beautiful. I
+          could not have asked for better people to work with. God Bless & have
+          a great day.
+        </p>
+      </div>
+    </div>
 
     <!-- Subscribe section -->
     <section class="subscribe">
