--- a/index.html
+++ b/index.html
@@ -133,44 +133,48 @@
     <section class="review-section"></section>
 
     <h1 class="review-tile">What our clients are saying</h1>
+    <p class="review-sub-title">
+      Discover why our online flower shop is the top choice - read heartwarming
+      stories from satisfied customers
+    </p>
     <div class="review">
       <div class="review-content">
         <img class="client-img" src="/images/man.png" alt="" />
         <h3 class="client-name pink-text">John Herdy</h3>
         <p class="quote">
-          Thank you so much for making my daughters wedding so beautiful. I
-          could not have asked for better people to work with. God Bless & have
-          a great day.
+          "The flowers I ordered were absolutely stunning! The online shop had a
+          wide range of options, and the delivery was prompt. A fantastic
+          experience overall."
         </p>
       </div>
 
       <div class="review-content">
         <img class="client-img" src="/images/man2.png" alt="" />
-        <h3 class="client-name pink-text">John Herdy</h3>
+        <h3 class="client-name pink-text">Smith James</h3>
         <p class="quote">
-          Thank you so much for making my daughters wedding so beautiful. I
-          could not have asked for better people to work with. God Bless & have
-          a great day.
+          "Amazing selection of beautiful flowers! The online ordering process
+          was a breeze, and the bouquet arrived fresh and on time. Highly
+          recommend!"
         </p>
       </div>
 
       <div class="review-content">
         <img class="client-img" src="/images/woman.png" alt="" />
-        <h3 class="client-name pink-text">John Herdy</h3>
+        <h3 class="client-name pink-text">Anna Miles</h3>
         <p class="quote">
-          Thank you so much for making my daughters wedding so beautiful. I
+          "Thank you so much for making my daughters wedding so beautiful. I
           could not have asked for better people to work with. God Bless & have
-          a great day.
+          a great day.""
         </p>
       </div>
 
       <div class="review-content">
         <img class="client-img" src="/images/woman2.png" alt="" />
-        <h3 class="client-name pink-text">John Herdy</h3>
+        <h3 class="client-name pink-text">Lei Nata</h3>
         <p class="quote">
-          Thank you so much for making my daughters wedding so beautiful. I
-          could not have asked for better people to work with. God Bless & have
-          a great day.
+          "I received a gorgeous bouquet from this online shop, and it brought
+          so much joy! The flowers were well-packaged and lasted longer than
+          expected. A reliable choice!"
         </p>
       </div>
     </div>
