--- a/index.html
+++ b/index.html
@@ -71,30 +71,6 @@
       </div>
     </section>
 
-    <!-- Delivery section -->
-    <!-- <section class="delivery-container">
-      <figure>
-        <img class="delivery-icon" src="images/Group 57.png" alt="" />
-        <figcaption class="delivery-icon-caption">
-          Same Day Delivery. Click & Collect.
-        </figcaption>
-      </figure>
-
-      <figure>
-        <img class="delivery-icon" src="images/Group 58.png" alt="" />
-        <figcaption class="delivery-icon-caption">
-          Fresh Flowers. Local Growers.
-        </figcaption>
-      </figure>
-
-      <figure>
-        <img class="delivery-icon" src="images/Group 59.png" alt="" />
-        <figcaption class="delivery-icon-caption">
-          24/7 Free Support.
-        </figcaption>
-      </figure>
-    </section> -->
-
     <!-- Hot deals section -->
     <section class="hot-deal-container">
       <div class="hot-deals-contents">
@@ -139,7 +115,11 @@
     </p>
     <div class="review">
       <div class="review-content">
-        <img class="client-img" src="/images/man.png" alt="" />
+        <img
+          class="client-img"
+          src="/images/man.png"
+          alt="client's picture-1"
+        />
         <h3 class="client-name pink-text">John Herdy</h3>
         <p class="quote">
           "The flowers I ordered were absolutely stunning! The online shop had a
@@ -149,7 +129,11 @@
       </div>
 
       <div class="review-content">
-        <img class="client-img" src="/images/man2.png" alt="" />
+        <img
+          class="client-img"
+          src="/images/man2.png"
+          alt="client's picture-2"
+        />
         <h3 class="client-name pink-text">Smith James</h3>
         <p class="quote">
           "Amazing selection of beautiful flowers! The online ordering process
@@ -159,7 +143,11 @@
       </div>
 
       <div class="review-content">
-        <img class="client-img" src="/images/woman.png" alt="" />
+        <img
+          class="client-img"
+          src="/images/woman.png"
+          alt="client's picture-3"
+        />
         <h3 class="client-name pink-text">Anna Miles</h3>
         <p class="quote">
           "Thank you so much for making my daughters wedding so beautiful. I
@@ -169,7 +157,11 @@
       </div>
 
       <div class="review-content">
-        <img class="client-img" src="/images/woman2.png" alt="" />
+        <img
+          class="client-img"
+          src="/images/woman2.png"
+          alt="client's picture-4"
+        />
         <h3 class="client-name pink-text">Lei Nata</h3>
         <p class="quote">
           "I received a gorgeous bouquet from this online shop, and it brought
