--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <div class="review-content">
         <img
           class="client-img"
-          src="/images/woman2.png"
+          src="/images/woman2.PNG"
           alt="client's picture-4"
         />
         <h3 class="client-name pink-text">Lei Nata</h3>
