fixed image issue

--- a/index.html
+++ b/index.html
@@ -115,11 +115,7 @@
     </p>
     <div class="review">
       <div class="review-content">
-        <img
-          class="client-img"
-          src="/images/man.png"
-          alt="client's picture-1"
-        />
+        <img class="client-img" src="images/man.png" alt="client's picture-1" />
         <h3 class="client-name pink-text">John Herdy</h3>
         <p class="quote">
           "The flowers I ordered were absolutely stunning! The online shop had a
@@ -131,7 +127,7 @@
       <div class="review-content">
         <img
           class="client-img"
-          src="/images/man2.png"
+          src="images/man2.png"
           alt="client's picture-2"
         />
         <h3 class="client-name pink-text">Smith James</h3>
@@ -145,7 +141,7 @@
       <div class="review-content">
         <img
           class="client-img"
-          src="/images/woman.png"
+          src="images/woman.png"
           alt="client's picture-3"
         />
         <h3 class="client-name pink-text">Anna Miles</h3>
@@ -159,7 +155,7 @@
       <div class="review-content">
         <img
           class="client-img"
-          src="/images/woman2.PNG"
+          src="images/woman2.PNG"
           alt="client's picture-4"
         />
         <h3 class="client-name pink-text">Lei Nata</h3>
