fixed image issue again

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <div class="review-content">
         <img
           class="client-img"
-          src="images/woman2.PNG"
+          src="images/woman2.png"
           alt="client's picture-4"
         />
         <h3 class="client-name pink-text">Lei Nata</h3>
